Criado as classes para teste de insave de sessão

--- a/pom.xml
+++ b/pom.xml
@@ -123,7 +123,17 @@
 			<artifactId>jaxb-api</artifactId>
 			<version>2.2.12</version>
 		</dependency>
+		
+		
+	<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>4.12</version>
+	</dependency>
+	
+		
 	</dependencies>
+	
 	<build>
 		<finalName>ingresso</finalName>
 		<plugins>
@@ -155,5 +165,5 @@
  			<name>William Prado</name>
  			<email>williamalvesprado@hotmail.com</email>
  		</developer>
- 	</developers>	
+ 	</developers>
 </project>
