--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.8.5</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 			<version>4.3.5.RELEASE</version>
@@ -123,17 +129,17 @@
 			<artifactId>jaxb-api</artifactId>
 			<version>2.2.12</version>
 		</dependency>
-		
-		
-	<dependency>
-		<groupId>junit</groupId>
-		<artifactId>junit</artifactId>
-		<version>4.12</version>
-	</dependency>
-	
-		
+
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+		</dependency>
+
+
 	</dependencies>
-	
+
 	<build>
 		<finalName>ingresso</finalName>
 		<plugins>
@@ -160,10 +166,10 @@
 		</plugins>
 	</build>
 
- 	<developers>
- 		<developer>
- 			<name>William Prado</name>
- 			<email>williamalvesprado@hotmail.com</email>
- 		</developer>
- 	</developers>
+	<developers>
+		<developer>
+			<name>William Prado</name>
+			<email>williamalvesprado@hotmail.com</email>
+		</developer>
+	</developers>
 </project>
